--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -16,7 +16,12 @@ description:
   work with any webserver that supports it.  It imitates the interface of the
   cgi-3000 and fastcgi-3000 packages where appropriate, but diverges where that API
   is tied too heavily to legacy interfaces, as with its handling of exceptions,
-  logging, and time.
+  logging, and time.  Its advantage over those packages is primarily in the area of
+  clean exception management and better control structure which allows more versatility
+  in processing requests which are not simple GETs.  In particular, POST of large files
+  should be possible, as should server-push responses which return content a piece at a
+  time.  Also, of course, as a native implementation, there is no dependency on a C
+  library, which simplifies the install process.
 
 -- Library
 --   exposed-modules: Network.FastCGI
