--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -27,6 +27,7 @@ description:
 --   exposed-modules: Network.FastCGI
 --   build-depends: base >= 4.1 && < 5,
 --                  bytestring >= 0.9.1.4,
+--                  containers >= 0.3.0.0,
 --                  mtl >= 1.1.0.2,
 --                  network >= 2.2.1.7 && < 3,
 --                  network-bytestring >= 0.1.2.1 && < 1
@@ -35,6 +36,7 @@ Executable direct-fastcgi
   main-is: Network/FastCGI.hs
   build-depends: base >= 4.1 && < 5,
                  bytestring >= 0.9.1.4,
+                 containers >= 0.3.0.0,
                  mtl >= 1.1.0.2,
                  network >= 2.2.1.7 && < 3,
                  network-bytestring >= 0.1.2.1 && < 1
