--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -26,9 +26,9 @@ description:
 -- Library
 --   exposed-modules: Network.FastCGI
 --   build-depends: base >= 4.1 && < 5,
---                  bytestring >= 0.9.1.4,
---                  containers >= 0.3.0.0,
---                  mtl >= 1.1.0.2,
+--                  bytestring >= 0.9.1.4 && < 1,
+--                  containers >= 0.3.0.0 && < 1,
+--                  mtl >= 1.1.0.2 && < 2,
 --                  network >= 2.2.1.7 && < 3,
 --                  network-bytestring >= 0.1.2.1 && < 1,
 --                  utf8-string >= 0.3.6 && < 1
@@ -36,9 +36,9 @@ description:
 Executable direct-fastcgi
   main-is: Network/FastCGI.hs
   build-depends: base >= 4.1 && < 5,
-                 bytestring >= 0.9.1.4,
-                 containers >= 0.3.0.0,
-                 mtl >= 1.1.0.2,
+                 bytestring >= 0.9.1.4 && < 1,
+                 containers >= 0.3.0.0 && < 1,
+                 mtl >= 1.1.0.2 && < 2,
                  network >= 2.2.1.7 && < 3,
                  network-bytestring >= 0.1.2.1 && < 1,
                  utf8-string >= 0.3.6 && < 1
