--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -12,15 +12,17 @@ bug-reports: http://dankna.com/issues/create/
 category: Network
 synopsis: Native implementation of the FastCGI protocol.
 description:
-  This package is a native implementation of the FastCGI protocol, allowing Haskell to
-  work with any webserver that supports it.  It imitates the interface of the
-  cgi-3000 and fastcgi-3000 packages where appropriate, but diverges where that API
-  is tied too heavily to legacy interfaces, as with its handling of exceptions,
-  logging, and time.  Its advantage over those packages is primarily in the area of
-  clean exception management and better control structure which allows more versatility
-  in processing requests which are not simple GETs.  In particular, POST of large files
-  should be possible, as should server-push responses which return content a piece at a
-  time.  Also, of course, as a native implementation, there is no dependency on a C
+12345678901234567890123456789012345678901234567890123456789012345678901234567890
+  This package is a native implementation of the FastCGI protocol, allowing
+  Haskell to work with any webserver that supports it.  It makes no attempt to
+  imitate the interfaces of the cgi-3000 and fastcgi-3000 packages, because
+  that API is tied too heavily to legacy interfaces, as with its handling of
+  exceptions, logging, and time.  Its advantage over those packages is
+  primarily in the area of clean exception management and better control
+  structure which allows more versatility in processing requests which are
+  not simple GETs.  In particular, POST of large files should be possible, as
+  should server-push responses which return content a piece at a time.  Also,
+  of course, as a native implementation, there is no dependency on a C
   library, which simplifies the install process.
 
 -- Library
