Took out the dummy main I had been using for testing, and changed the cabal file to not build an executable.

--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -24,18 +24,8 @@ description:
   of course, as a native implementation, there is no dependency on a C
   library, which simplifies the install process.
 
--- Library
---   exposed-modules: Network.FastCGI
---   build-depends: base >= 4.1 && < 5,
---                  bytestring >= 0.9.1.4 && < 1,
---                  containers >= 0.3.0.0 && < 1,
---                  mtl >= 1.1.0.2 && < 2,
---                  network >= 2.2.1.7 && < 3,
---                  network-bytestring >= 0.1.2.1 && < 1,
---                  utf8-string >= 0.3.6 && < 1
-
-Executable direct-fastcgi
-  main-is: Network/FastCGI.hs
+Library
+  exposed-modules: Network.FastCGI
   build-depends: base >= 4.1 && < 5,
                  bytestring >= 0.9.1.4 && < 1,
                  containers >= 0.3.0.0 && < 1,
