--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -14,7 +14,7 @@ synopsis: Native implementation of the FastCGI protocol.
 description:
   This package is a native implementation of the FastCGI protocol, allowing
   Haskell to work with any webserver that supports it.  It makes no attempt to
-  imitate the interfaces of the cgi-3000 and fastcgi-3000 packages, because
+  imitate the interface of the cgi-3000 and fastcgi-3000 packages, because
   that API is tied too heavily to legacy interfaces, as with its handling of
   exceptions, logging, and time.  Its advantage over those packages is
   primarily in the area of clean exception management and better control
