--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -1,5 +1,5 @@
 name: direct-fastcgi
-version: 1.0.2
+version: 1.0.3
 cabal-version: >= 1.2
 build-type: Simple
 license: BSD3
@@ -23,6 +23,10 @@ description:
   should server-push responses which return content a piece at a time.  Also,
   of course, as a native implementation, there is no dependency on a C
   library, which simplifies the install process.
+
+  Version 1.0.3 adds support for the new version of the network package, which
+  integrates what used to be a separate package, network-bytestring.  It also
+  provides compatibility with (unreleased as of this writing) GHC 7.1.
   
   Version 1.0.2 fixes a bug; response headers are now sent if they have
   not already been when fCloseOutput is called explicitly.  It also removes
