--- a/direct-fastcgi.cabal
+++ b/direct-fastcgi.cabal
@@ -9,7 +9,6 @@ author: Dan Knapp
 maintainer: dankna@gmail.com
 homepage: http://dankna.com/software/
 bug-reports: http://dankna.com/issues/create/
-source-repository: http://dankna.com/software/darcs/direct-fastcgi/
 category: Network
 synopsis: Native implementation of the FastCGI protocol.
 description:
@@ -32,6 +31,10 @@ description:
   Version 1.0.2 fixes a bug; response headers are now sent if they have
   not already been when fCloseOutput is called explicitly.  It also removes
   spurious debug output that had been left in by mistake.
+
+Source-Repository head
+  type: darcs
+  location: http://dankna.com/software/darcs/direct-fastcgi/
 
 Library
   exposed-modules: Network.FastCGI
